cluster/apps/apps/home-assistant/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: home-assistant-authentik-outpost
#  namespace: default
#spec:
#  ingressClassName: nginx
#  rules:
#   - host: &host "home.${S_HOMEPROD_DOMAIN}"
#     http:
#       paths:
#         - path: /outpost.goauthentik.io
#           pathType: Prefix
#           backend:
#             service:
#               name: ak-outpost-authentik-embedded-outpost
#               port:
#                 number: 9000
#  tls:
#    - hosts:
#        - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-code-authentik-outpost
  namespace: default
spec:
  ingressClassName: nginx
  rules:
   - host: &host "hass-code.${S_HOMEPROD_DOMAIN}"
     http:
       paths:
         - path: /outpost.goauthentik.io
           pathType: Prefix
           backend:
             service:
               name: ak-outpost-authentik-embedded-outpost
               port:
                 number: 9000
  tls:
    - hosts:
        - *host
